# posti-cli

./: README.md  pyproject.toml
src/posti_cli/: __init__.py  __main__.py  cli.py
src/posti_cli/core/: client.py  client_v2.py  estimate.py  labelless.py  methods.py  oauth.py  pickuppoints.py  shipments.py
src/posti_cli/tests/: test_client_v2.py  test_estimate.py  test_labelless.py  test_oauth.py  test_pickuppoints.py  test_shipments.py
src/posti_cli/utils/: repl_skin.py
